css/main.css
/* ... */
.cal-month {
  display: block;
  position: relative;
  top: 6em;
  width: 65%;
  margin-left: auto;
  margin-right: auto;
  margin-top: 1em;
  margin-bottom: 0;
  list-style: none;
}

.cal-month li {
  display: inline-block;
  position: relative;
  margin: 0.15em 0.15em 0.15em 0.15em;
  padding: 0;
  text-align: center;
}

.day-cell {
  display: inline-block;
  position: relative;
  width: 100%;
  padding: .8em;
  font-family: "Apercu", Verdana, sans-serif;
  font-size: 1.85rem;
  text-decoration: none;
  color: #A8A7A7;
  border: 1.5px solid #A8A7A7;
}

.day-cell:active, .day-cell:hover, .day-cell:focus {
  color: #ED834E;
  border: 1.5px solid #ED834E;
}

.day-cell-unavailable {
  display: inline-block;
  position: relative;
  width: 100%;
  padding: .8em;
  font-family: "Apercu", Verdana, sans-serif;
  font-size: 1.85rem;
  text-decoration: none;
  color: #dcddde;

  border: 1.5px solid #dcddde;
}

.day-cell-unavailable:active, .day-cell-unavailable:hover, .day-cell-unavailable:focus {
  color: #dcddde;
}

.filler-cell {
  display: inline-block;
  position: relative;
  width: 100%;
  padding: .8em;
  font-family: "Apercu", Verdana, sans-serif;
  font-size: 1.85rem;
  text-decoration: none;
  color: #ffffff;

  border: 1.5px solid #ffffff;
}

.filler-cell:active, .filler-cell:hover, .filler-cell:focus {
  color: #ffffff;
}

.cal-buttons {
  display: block;
  position: relative;
  top: 6em;
  width: 65%;
  margin-left: auto;
  margin-right: auto;
  margin-top: 1em;
  margin-bottom: 7em;
}


.styleguide-header{
  background-color: #F0FFF2;
  height: 10em;
  margin-top: -1.5em;
}

.styleguide-heading{
  display: inline-block;
  box-sizing: border-box;
  top: 0;

  color: #A8A7A7;

  font-family: "Apercu", Verdana, sans-serif;
  text-transform: lowercase;
  font-size: 2em;
  line-height: 1.2em;

  margin-left: 3%;
}

#sitemap{
  padding-top: 8em;
}

#citations {
    padding-top: 4em;
    padding-left: 1.2em;
}

